<resources>
    <string name="app_name">Healthy Recipes &amp; Cooking Videos</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="slide_1_title">Welcome to Food Recipes!</string>
    <string name="slide_1_desc">Introducing Yonia, with more than 6 thousand receipes and amazing features yonia is your best choice to make any cook great.</string>
    <string name="start">Start</string>
    <string name="search_hint">Search for receipes</string>
    <string name="more">See more</string>
    <string name="special">Ramadan special</string>
    <string name="chief_follow">Chief following</string>
    <string name="food_stories">Food Stories</string>
    <string name="for_vegetarians">For vegetarians</string>
    <string name="cookbook">Cookbook offical chef</string>
</resources>
